# ledmusicreworkembedded

./: .gitignore  CMakeLists.txt  README.md  run.sh
example/: CMakeLists.txt
example/src/: container_test.cpp  serial_hello_world.cpp
lib/: CMakeLists.txt
lib/LED/: CMakeLists.txt
lib/LED/include/: LED.h
lib/LED/src/: LED.cpp
lib/file_descriptor/include/: file_descriptor.h
lib/file_descriptor/src/: file_descriptor.cpp
lib/fixed_queue/include/: fixed_queue.h
lib/geometry/: CMakeLists.txt
lib/geometry/include/: circle.h  polygon.h  rgb.h
lib/geometry/src/: circle.cpp  polygon.cpp
lib/job_thread/: CMakeLists.txt
lib/job_thread/include/: job_thread.h
lib/job_thread/src/: job_thread.cpp
lib/led/: CMakeLists.txt
lib/led/include/: led.h
lib/led/src/: led.cpp
lib/parser/: CMakeLists.txt
lib/parser/include/: config.h  parser.h
lib/parser/src/: config.cpp  parser.cpp
lib/player/: CMakeLists.txt
lib/player/include/: fixed_queue.h  player.h  polygon.h
lib/player/src/: player.cpp  polygon.cpp
lib/playerDEPRECATED/: CMakeLists.txt
lib/playerDEPRECATED/src/: player.cpp
lib/polygon/: CMakeLists.txt
lib/polygon/include/: polygon.h  rgb.h
lib/polygon/src/: polygon.cpp
lib/rpi_ws281x/: CMakeLists.txt
lib/rpi_ws281x/include/: clk.h  dma.h  gpio.h  mailbox.h  pcm.h  pwm.h  rpihw.h  ws2811.h
lib/rpi_ws281x/src/: dma.c  mailbox.c  main.c  pcm.c  pwm.c  rpihw.c  ws2811.c
lib/serial/: CMakeLists.txt
lib/serial/include/: serial.h
lib/serial/src/: serial.cpp
project/: CMakeLists.txt
project/src/: main.cpp
